[package]
name = "resources"
version = "1.7.1"
authors = ["nokyan <hello@nokyan.net>"]
edition = "2024"
rust-version = "1.85.0"
homepage = "https://apps.gnome.org/app/net.nokyan.Resources/"
license = "GPL-3.0-or-later"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = true
strip = true
opt-level = 3

[dependencies]
adw = { version = "0.7.1", features = ["v1_6"], package = "libadwaita" }
anyhow = { version = "1.0.94", features = ["backtrace"] }
async-channel = "2.3.1"
clap = { version = "4.5.23", features = ["derive"] }
gettext-rs = { version = "0.7.2", features = ["gettext-system"] }
glob = "0.3.1"
gtk = { version = "0.9.4", features = ["v4_10"], package = "gtk4" }
lazy-regex = "3.3.0"
libc = { version = "0.2.167", features = ["extra_traits"] }
log = "0.4.22"
nix = { version = "0.29.0", default-features = false, features = [
    "signal",
    "sched",
] }
num_cpus = "1.16.0"
nvml-wrapper = "0.10.0"
paste = "1.0.15"
path-dedot = "3.1.1"
plotters = { version = "0.3.7", default-features = false, features = [
    "area_series",
] }
plotters-cairo = "0.7.0"
pretty_env_logger = "0.5"
process-data = { path = "lib/process_data" }
rmp-serde = "1.3.0"
ron = "0.8.1"
rust-ini = "0.21.1"
strum = "0.26.3"
strum_macros = "0.26.4"
sysconf = "0.3.4"

[dev-dependencies]
pretty_assertions = "1.4.1"
