[package]
name = "resources"
version = "1.10.0"
authors = ["nokyan <hello@nokyan.net>"]
edition = "2024"
rust-version = "1.85.0"
homepage = "https://apps.gnome.org/app/net.nokyan.Resources/"
license = "GPL-3.0-or-later"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = true
strip = true
opt-level = 3

[dependencies]
adw = { version = "0.8.1", features = ["v1_8"], package = "libadwaita" }
anyhow = { version = "1.0.100", features = ["backtrace"] }
async-channel = "2.5.0"
clap = { version = "4.5.56", features = ["derive"] }
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
glob = "0.3.3"
gtk = { version = "0.10.3", features = ["v4_12"], package = "gtk4" }
lazy-regex = "3.5.1"
libc = { version = "0.2.180", features = ["extra_traits"] }
log = "0.4.29"
neli-wifi = { version = "0.6.1", features = ["default"] }
nix = { version = "0.31.1", default-features = false, features = [
    "signal",
    "sched",
] }
num_cpus = "1.17.0"
nvml-wrapper = "0.11.0"
pastey = "0.2.1"
path-dedot = "3.1.1"
plotters = { version = "0.3.7", default-features = false, features = [
    "area_series",
] }
plotters-cairo = "0.8.0"
pretty_env_logger = "0.5"
process-data = { path = "lib/process_data" }
rmp-serde = "1.3.1"
ron = "0.12.0"
rust-ini = "0.21.3"
strum = "0.27.2"
strum_macros = "0.27.2"
sysconf = "0.3.4"

[dev-dependencies]
pretty_assertions = "1.4.1"
