[package]
name = "process-data"
version = "1.7.1"
authors = ["nokyan <hello@nokyan.net>"]
edition = "2021"
rust-version = "1.80.0"
homepage = "https://apps.gnome.org/app/net.nokyan.Resources/"
license = "GPL-3.0-or-later"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = true
strip = true
opt-level = 3

[dependencies]
anyhow = "1.0.94"
glob = "0.3.1"
lazy-regex = "3.3.0"
libc = "0.2.167"
log = "0.4.22"
num_cpus = "1.16.0"
nutype = { version = "0.5.0", features = ["serde"] }
nvml-wrapper = "0.10.0"
pretty_env_logger = "0.5"
serde = { version = "1.0.215", features = ["serde_derive"] }
syscalls = { version = "0.6.18", features = ["all"] }
sysconf = "0.3.4"
unescape = "0.1.0"
uzers = "0.12.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
