[package]
name = "process-data"
version = "1.9.1"
authors = ["nokyan <hello@nokyan.net>"]
edition = "2024"
rust-version = "1.85.0"
homepage = "https://apps.gnome.org/app/net.nokyan.Resources/"
license = "GPL-3.0-or-later"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = true
strip = true
opt-level = 3

[dependencies]
anyhow = "1.0.100"
glob = "0.3.3"
lazy-regex = "3.4.2"
libc = "0.2.178"
num_cpus = "1.17.0"
nutype = { version = "0.6.2", features = ["serde"] }
nvml-wrapper = "0.11.0"
serde = { version = "1.0.228", features = ["serde_derive"] }
syscalls = { version = "0.7.0", features = ["all"] }
thiserror = "2.0.17"
unescape = "0.1.0"
uzers = "0.12.2"

[dev-dependencies]
pretty_assertions = "1.4.1"
